# openGL

./: .gitignore  CMakeLists.txt  README.md  cherno92.cpp  editor.cpp  glfw.cpp  imgui.ini  main.cpp  test_1VAO.cpp
editor/: CMakeLists.txt  imgui.ini  overlay.frag.glsl
editor/shaders/: default.vertex.glsl  overlay.frag.glsl  overlay.vertex.glsl  transform.frag.glsl  transform.vertex.glsl
editor/src/: a.txt  ffmpeg.cpp  ffmpeg.h  implglfw.h  implimgui.h  main.cpp  objects.cpp  objects.h  opengl.cpp  opengl.h  overlay.glsl  shadercomponent.cpp  shadercomponent.hpp  timeline.cpp  timeline.hpp  trackalloc.h  ui.h
editor/src/application/: import.hpp  render.cpp  render.hpp
editor/src/domain/: shadercomponent.cpp  timeline.cpp  timeline.hpp
editor/src/infrastructure/: ffmpeg.cpp  ffmpeg.h  implglfw.h  mediapool.cpp  mediapool.h  opengl.h  timelinewalker.cpp  timelinewalker.hpp
include/editor/: ffmpeg.cpp  ffmpeg.h  ffmpeg2.cpp  objects.cpp  objects.h  trackalloc.cpp
include/game/: gameobjects.cpp  gameobjects.h  gamesettings.cpp  gamesettings.h
include/imgui/: imgui.ini
include/objects/: ebo.cpp  ebo.h  layout.cpp  layout.h  renderer.cpp  renderer.h  shaderClass.cpp  shaderClass.h  texture.cpp  texture.h  vao.cpp  vao.h  vbElement.cpp  vbElement.h  vbo.cpp  vbo.h  vertex.h
include/shaders/: ebo.h  shader.h  shaderClass.h  vao.h  vbo.h
misc/: conway.cpp  imgui.ini  main.cpp
shaders/: conway.frag  conway.vert  default.frag  default.frag.glsl  default.vert  ebo.cpp  exercise.frag  shaderClass.cpp  transform.vertex.glsl  vao.cpp  vbo.cpp
src/: glad.c  plan-import.hpp
src/application/: render.cpp
src/domain/: shadercomponent.hpp
